--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -1,23 +1,70 @@
 header{
-	/* height: var(--topGap); */
-	display:flex;
-	justify-content:center;
-}
-#header-containers{
-	width: var(--viewWidth);
-	height:100%;
+	height: var(--topGap);
 	border:1px solid blue;
 }
-#header-container{
+
+/* 국가-리그-팀 선택 dropdown css */
+
+.header-dropdown-container{
 	display: flex;
 	justify-content:center;
 	align-items:center;
 	padding:20px;
+	height: 70%;
+	background-color:skyblue; 
 }
 
-.header-selecter-container, .header-hover-container{
+.header-selecter-container{
 	display:flex;
 }
 .header-selecter-contents {
 	margin-right:10px;
+}
+
+/* menu hover css */
+.header-hover-container{
+	background-color : yellow; 
+	height: 30%;
+}
+ .header-left-contents{
+	width: 70%;
+	display:flex;
+	
+}
+
+header .header-item{
+	width : 33%;
+}
+header .header-item .item-name{
+	padding: 10px 20px;
+	font-family: Arial, sans-serif;
+	font-size:20px;
+	border:1px solid red;
+}
+header .header-item:hover .item-name{
+  background-color: #2c2a29;
+  color: #669900;
+  border-radius: 6px 6px 0 0;
+}
+header .header-item .item-contents{
+  width: 100%;
+  position: fixed;
+  display: none;
+}
+header .header-item:hover .item-contents{
+  display: block;
+}
+
+header.header-item .item-contents .contents-menu{ 
+  background-color: #2c2a29;
+  height: 200px;
+} 
+
+@media screen and (max-width: 700px) {
+  .header-selecter-container, .header-hover-container{
+	display:block;
+  }
+  .header-selecter-contents{
+  	width: 80%;
+  }
 }
