feat : 전체 이적 현황 조회 시 대상 리그에 in 뿐만 아니라 out에 대한 이적 현황 기능 추가에 따른 화면 변경

--- a/src/main/webapp/css/transferList.css
+++ b/src/main/webapp/css/transferList.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-.transfer-contents {
+.transfer-contents-in, .transfer-contents-out {
 	display: grid;
 	grid-template-columns:repeat(7, 1fr);
 }
