--- a/src/main/webapp/css/summary.css
+++ b/src/main/webapp/css/summary.css
@@ -1,11 +1,11 @@
-@charset "UTF-8";
 .summary{
-	margin: 20px 0;
+	margin: 1.2rem 0;
 	border-radius:20px;
 	background: linear-gradient(90deg, rgba(159,153,247,1) 0%, rgba(206,176,238,1) 34%, rgba(120,225,246,1) 100%);
 	display:flex;
 	justify-content:center;
 	align-items:center;
+	width:100%;
 }
 .summary-container {
 	width:90%;
@@ -14,7 +14,7 @@
 .summary-title {
 	font-size: 22px;
 	font-weight:700;
-	padding: 15px;
+	padding: 1rem;
 }
 .summary-contents {
 	display: grid;
@@ -26,7 +26,7 @@
 .summary-contents > div {
 	border: 1px solid;
 	text-align: center;
-	padding: 5px;
+	padding: 0.3rem;
 	font-size: medium;
 }
 .summary-contents > div.table-title{
@@ -37,15 +37,15 @@
 }
 
 .summary-detail-container{
-	height:50px;
-    bottom: 5px;
-    left: 10px;
-    margin-bottom :10px;
+	height:3rem;
+    bottom: 0.3rem;
+    left: 0.6rem;
+    margin-bottom :0.6rem;
     display:flex;
     justify-content:end;
 }
 .summary-detail-container > button{
-	width:100px;
+	width:6rem;
 }
 
 .grid-noData-style {
