--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -1,7 +1,7 @@
 header{
 	position: relative;
 	height: var(--topGap);
-	margin-bottom:2rem;
+	margin-bottom:var(--topMarginB);
 	background-color:beige;
 }
 
