--- a/src/main/webapp/css/transferList.css
+++ b/src/main/webapp/css/transferList.css
@@ -7,3 +7,38 @@
 .in-out-header {
 	grid-column: 1 / span 7;
 }
+
+
+.transfer-menu{
+	display:flex;
+}
+.transfer-menu-btn{
+	width:70%;
+}
+.transfer-menu-select{
+	width:30%;
+	display:flex;
+	justify-content:end;
+	margin-right:1rem;
+}
+.transfer-menu-select > select{
+	width:40%;
+}
+
+.transfer-contents-in > div, .transfer-contents-out > div{
+	border: 1px solid;
+	text-align: center;
+	padding : 0.5rem;
+}
+
+.transfer-title{
+	font-weight:700;
+	padding: 1rem;
+	background-color : #9EFCFC;
+}
+
+
+.transfer-noData-style{
+	grid-column : 1/-1;
+	padding :1rem;
+}
