--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -52,14 +52,10 @@ li {
 }
 .detail-btn > button{
 	border-radius:10px;
-	border: none;
-	background-color : #0000FF;
-	color:white;
 	height:80%;
 }
 .detail-btn:hover > button{
-	cursor:pointer;
-	background-color : #556ef9
+	cursor:pointer;;
 }
 ::-webkit-scrollbar {
     width: 8px;  /* 스크롤바의 너비 */
@@ -76,4 +72,28 @@ li {
 }
 ::-webkit-scrollbar-track {
     background: rgba(33, 122, 244, .1);  /*스크롤바 뒷 배경 색상*/
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-primary:hover {
+  color: #fff;
+  background-color: #0069d9;
+  border-color: #0062cc;
+}
+
+.btn-info {
+  color: #fff;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
+}
+
+.btn-info:hover {
+  color: #fff;
+  background-color: #138496;
+  border-color: #117a8b;
 }
