--- a/src/main/webapp/css/playerInfo.css
+++ b/src/main/webapp/css/playerInfo.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 .playerInfo-container{
-		display: grid;
-	grid-template-rows: repaeat(4, 100px);
-	grid-template-columns: repeat(5, 1fr);
-	gap: 20px 10px;
+	display: grid;
+	grid-template-rows: 1fr 1fr 1fr 1fr;
+	grid-template-columns: 2fr 2fr 2fr 1fr 2fr;  
+/* 	gap: 20px 10px; */
 	grid-template-areas:
 		"picture_player name previousteam . newteam"
 		"picture_player age picture_previousteam picture_arrow picture_newteam"
@@ -19,17 +19,24 @@
 #picture_newteam{ grid-area: picture_newteam; }
 #position{ grid-area: position; }
 #fee{ grid-area: fee; }
-#picture_arrow{ 
-	grid-area: picture_arrow;
-	/*  object-fit: fill;
-	width: 50%; 
-	height: 50%;
-	max-width:100%;
-	max-height:100%; */  
-	}
+#picture_arrow{grid-area: picture_arrow;}
 
+#picture_arrow > img{
+	width: 80%; 
+	height: inherit;
+}
 
-/* image {
-	width:50%;
-	height:50%;
-} */
+#previousteam, #newteam{
+	text-align:center;
+	margin : auto 0px; 
+}
+#player_name, #player_age, #position, #fee{
+	margin : auto 0px auto 20px; 
+}
+
+#picture_player, #picture_previousteam, #picture_newteam, #picture_arrow{
+	display: flex;
+	justify-content:center;
+	align-items:center;
+}
+
