--- a/src/main/webapp/css/summary.css
+++ b/src/main/webapp/css/summary.css
@@ -1,7 +1,7 @@
 .summary{
 	margin: 1.2rem 0;
 	border-radius:20px;
-	background: linear-gradient(90deg, rgba(159,153,247,1) 0%, rgba(206,176,238,1) 34%, rgba(120,225,246,1) 100%);
+	background: #FFFDDC;
 	display:flex;
 	justify-content:center;
 	align-items:center;
@@ -17,24 +17,26 @@
 	padding: 1rem;
 }
 .summary-contents {
-	display: grid;
-	grid-template-columns:repeat(6,1fr);
-	border: 1px solid;
+	border: none;
 	background-color:white;
 }
 
 .summary-contents > div {
-	border: 1px solid;
+	padding: 0.5rem;
+	border-bottom : 1px solid #F0EFEF;
 	text-align: center;
-	padding: 0.3rem;
 	font-size: medium;
 }
-.summary-contents > div.table-title{
-	background-color : #FFE0C6;
+.summary-contents > .summary-contents-title{
+	font-weight:700;
+	background-color : #F0EFEF;
 }
-.summary-category {
-	grid-row:1/6;
-}
+.summary-contents-title, .summary-contents-content {
+ display: grid;
+ grid-template-columns:repeat(6,1fr);
+ place-items: center;
+} 
+
 
 .summary-detail-container{
 	height:3rem;
@@ -50,4 +52,15 @@
 
 .grid-noData-style {
 	grid-column : 1/-1;
+}
+
+.summary-contents-content:hover{
+   /* background-color:lightgray; */
+   cursor:pointer;
+   box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+a {
+	text-decoration : none;
+	color:black;
 }
