feat : 로그인, 로그아웃 시 로그인 버튼 변환 및 나의메뉴 hidden 구현

--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -232,7 +232,7 @@ header .header-item .item-contents .contents-menu .inner > li:hover{
 }
 
 /* login, logout 공통  */
-.login-container.hidden, .logout-container.hidden, .login-container.scrollHidden, .logout-container.scrollHidden{
+.header-item.hidden, .login-container.hidden, .logout-container.hidden, .login-container.scrollHidden, .logout-container.scrollHidden{
 	display:none;
 }
 
