--- a/src/main/webapp/css/summaryDetail.css
+++ b/src/main/webapp/css/summaryDetail.css
@@ -63,8 +63,9 @@
 	width:50px;
 	height:50px;
 	border-radius:0.5rem;
-	border:none;
-	cursor:pointer;
+	border:1px solid lightgray;
+	cursor:pointer; 
+	box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 .top-btn.hidden, .top-btn.hidden{
