--- a/src/main/webapp/css/external.css
+++ b/src/main/webapp/css/external.css
@@ -5,8 +5,23 @@
 	align-items:center;
 }
 .siteLink{
-	width:60%;
+	width:46%;
 	height:100%;
 	border:1px solid red;
-	
+	margin-right:4%;
+}
+
+/* YOUTUBE VIDEO */
+.youtube {
+  position:relative;
+  width:50%;	
+  height: 100%;
+  border:1px solid blue;
+  overflow: hidden;
+}
+#player {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
 }
