--- a/src/main/webapp/css/external.css
+++ b/src/main/webapp/css/external.css
@@ -1,11 +1,19 @@
 
 .map{
-	width:100%;
-	height:100%;
-	/* margin-right:4%; */
+	width: 100%;
+    height: 500px;
+	display:flex;
+	justify-content:center;
+	align-items:center;
 	margin-bottom:20px;
 }
-
+.mapDiv{
+	width:80%;
+	height:100%;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
 /* YOUTUBE VIDEO */
 .youtube {
 	  display:flex;
